perf: CollectionRepositoryCustom 생성 및 적용